Bug 93756 - Highlight color is not shown in character style list
Summary: Highlight color is not shown in character style list
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
: 133181 136856 (view as bug list)
Depends on:
Blocks: Sidebar-Styles Highlight-Color-Button
  Show dependency treegraph
 
Reported: 2015-08-29 05:51 UTC by tomaskeb
Modified: 2020-09-24 08:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
the difference (29.32 KB, image/png)
2015-08-29 05:51 UTC, tomaskeb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tomaskeb 2015-08-29 05:51:24 UTC
Created attachment 118252 [details]
the difference

If a background color is set for a paragraph style, it does show in the style list. If the same is done for a character style, the background (or highlight) is not shown in the list.
Comment 1 A (Andy) 2015-08-30 08:30:21 UTC
Reproducible with LO 5.0.1.2., Win 8.1
Comment 2 Cor Nouws 2017-01-09 21:17:49 UTC
(In reply to tomaskeb from comment #0)

> If a background color is set for a paragraph style, it does show in the
> style list. If the same is done for a character style, the background (or
> highlight) is not shown in the list.

Background != Highlight.
So not a bug.
You could argue for enhancement: show character highlighting for character style in preview.
Comment 3 Heiko Tietze 2017-01-10 20:28:52 UTC
(In reply to Cor Nouws from comment #2)
> Background != Highlight.

Highlighting is part of the character style. You can modify or add a new character style, and apply it to the selection but the preview doesn't show the highlight property (similar a background color). So it's a bug, IMHO.
Comment 4 Cor Nouws 2017-01-11 08:35:22 UTC
(In reply to Heiko Tietze from comment #3)
> Highlighting is part of the character style. You can modify or add a new
> character style, and apply it to the selection but the preview doesn't show
> the highlight property (similar a background color). So it's a bug, IMHO.

In the sense that the developer thought of including background color and not highlighting.. OK. (Now some devs argue that when things are not implemented in new features it's not a bug, but..)
Comment 5 QA Administrators 2018-09-04 02:54:33 UTC Comment hidden (obsolete)
Comment 6 Cor Nouws 2018-09-07 15:34:54 UTC
still in Version: 6.2.0.0.alpha0+
Build ID: c4fb70d1f70209e31936b9c488a044087f11c303
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-09-06_20:56:07
Locale: nl-NL (nl_NL.UTF-8); Calc: threaded
Comment 7 QA Administrators 2019-09-08 05:03:07 UTC Comment hidden (obsolete)
Comment 8 tomaskeb 2019-09-08 07:09:32 UTC
Still there in 6.3.1.2.
Comment 9 Telesto 2020-08-28 07:35:02 UTC
*** Bug 133181 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2020-09-22 13:20:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/804dac9222fdf6e423993ac348a43e52a8f74ba3

tdf#93756 show highlight color in style preview

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Telesto 2020-09-24 08:56:33 UTC
*** Bug 136856 has been marked as a duplicate of this bug. ***