tdf#93756 show highlight color in style preview

Change-Id: Ibddd97f8829d824667657177c7311680707df4e5